[gd_scene load_steps=8 format=3 uid="uid://7plrfi08xwim"]

[ext_resource type="Script" uid="uid://x3rntlsmsey3" path="res://enemy.gd" id="1_sbtgs"]
[ext_resource type="Texture2D" path="res://sprites/Plants/Flowers/purpleFlower1.png" id="2_kyemj"]
[ext_resource type="Texture2D" uid="uid://grmqxp2fvcf0" path="res://sprites/Screenshot 2025-10-06 at 7.58.08â€¯AM.png" id="3_awxhs"]

[sub_resource type="SpriteFrames" id="SpriteFrames_io6nn"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_kyemj")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0eokr"]
size = Vector2(92, 108)

[sub_resource type="CircleShape2D" id="CircleShape2D_0eokr"]
radius = 73.8975

[sub_resource type="CircleShape2D" id="CircleShape2D_p3aow"]
radius = 11.3421

[node name="Villager" type="CharacterBody2D" groups=["enemies"]]
collision_layer = 4
collision_mask = 32
motion_mode = 1
script = ExtResource("1_sbtgs")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_io6nn")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-1, -4)
shape = SubResource("RectangleShape2D_0eokr")
debug_color = Color(0.861132, 0.279755, 0.584629, 0.42)

[node name="DetectionArea" type="Area2D" parent="." groups=["player"]]
visible = false
position = Vector2(-3, -2)
collision_layer = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectionArea"]
visible = false
position = Vector2(1, 0)
scale = Vector2(11.76, 12.32)
shape = SubResource("CircleShape2D_0eokr")
debug_color = Color(0.603165, 0.400838, 0.928255, 0.42)

[node name="Timer" type="Timer" parent="."]

[node name="AttackArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackArea"]
scale = Vector2(8.2, 8.08)
shape = SubResource("CircleShape2D_p3aow")
debug_color = Color(0.960414, 0.141841, 0.361271, 0.42)

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(2.36, 1.96)
texture = ExtResource("3_awxhs")

[connection signal="body_entered" from="DetectionArea" to="." method="_on_detection_area_body_entered"]
[connection signal="body_exited" from="DetectionArea" to="." method="_on_detection_area_body_exited"]
